--- a/assets/icons/style.css
+++ b/assets/icons/style.css
@@ -1,20 +1,19 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('fonts/icomoon.eot?dod07w');
-  src: url('fonts/icomoon.eot?dod07w#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?dod07w') format('truetype'),
-    url('fonts/icomoon.woff?dod07w') format('woff'),
-    url('fonts/icomoon.svg?dod07w#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?83uem2');
+  src:  url('fonts/icomoon.eot?83uem2#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?83uem2') format('truetype'),
+    url('fonts/icomoon.woff?83uem2') format('woff'),
+    url('fonts/icomoon.svg?83uem2#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^='icon-'],
-[class*=' icon-'] {
+[class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
-
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -26,6 +25,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-linkedin:before {
+  content: "\e903";
+}
+.icon-github:before {
+  content: "\e904";
+}
+.icon-circle:before {
+  content: "\e901";
+}
+.icon-x:before {
+  content: "\e902";
+}
 .icon-hash:before {
-  content: '\e900';
+  content: "\e900";
 }
