--- a/styles/style.css
+++ b/styles/style.css
@@ -347,6 +347,17 @@ input {
   }
 }
 
+@media (max-width: 320px) {
+  html {
+    font-size: 10px;
+  }
+
+  .square {
+    width: 70px;
+    height: 70px;
+  }
+}
+
 @media (max-height: 440px) {
   footer {
     visibility: hidden;
