--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ body {
 }
 
 header {
-  padding-top: 2.5rem;
+  padding-top: 3rem;
 }
 
 .logo {
@@ -318,6 +318,29 @@ input {
   box-sizing: border-box;
 
   border-left: 0.2px solid var(--yellow);
+}
+
+/*Button back to home================*/
+
+.back-to-home {
+  background: var(--yellow);
+  color: var(--dark-purple);
+  position: fixed;
+  left: 1rem;
+  top: 1rem;
+  padding: 0.5rem;
+  clip-path: circle();
+  font-size: 1.5rem;
+  line-height: 0;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.3s;
+  border: none;
+}
+
+.back-to-home.show {
+  visibility: visible;
+  opacity: 1;
 }
 
 /* Responsive ====================*/
